# ASV_NEAT

./: .gitignore  README.md  requirements.txt
asv_neat/configs/: neat_crossing.cfg
asv_neat/scripts/: combine_lime_shap_animation.py  combine_lime_shap_plots.py  crossing_scenario.py  demo.py  demo_winner.py  lime_explain.py  shap_explain.py  train.py
asv_neat/src/asv_neat/: __init__.py  accelerator.py  boat.py  cli_helpers.py  config.py  env.py  hyperparameters.py  neat_training.py  scenario.py  utils.py
space for clarity - lab_2 copy/New folder/: README.txt  env.py  multi_boat_turn_session_env.py  train_turn_session_dqn.py
space for clarity - lab_2 copy/New folder2/: env3.py  train.py
space for clarity - lab_2 copy/New folder3/: env3.py  train3.py
space for clarity - lab_2 copy/space2-v1.1/RL_ASV/: channel_crossing_env.py  demo.py
space for clarity - lab_2 copy/space4-fb2/feature-RL-ASV/: boat_environment_sim.py  train_feature_ddqn.py
space for clarity - mac copy/New folder2/: demo.py  train3.py
space for clarity - mac copy/New folder3/: env3.py
space for clarity - mac copy/New folder4/: README.md  pyproject.toml
space for clarity - mac copy/New folder4/src/scripts/: train_v3.py
space for clarity - mac copy/New folder4/src/sectorsim/: __init__.py  control.py  entities.py  env.py  env_config.py  utils.py
space for clarity - mac copy/New folder4/src/training/: __init__.py  actions.py  agent.py  hparams.py  networks.py  replay.py  train.py
space for clarity - mac copy/space1-v1.4/RL_ASV/: channel_crossing_env.py  demo.py
(+15 files in other folders)
