[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sectorsim"
version = "0.1.0"
description = "Multi-boat sectors RL environment and DQN trainer"
requires-python = ">=3.10"
dependencies = ["numpy", "torch", "pygame; platform_system!='Linux'"]

[tool.setuptools.packages.find]
where = ["src"]